ICL EHL: igt@runner@aborted - fail - Previous test: nothing - WARN_ON(1), WARNING: CPU: 3 PID: 198 at drivers/gpu/drm/i915/display/intel_audio.c:611 hsw_audio_codec_enable+0x594/0x5a0 [i915]
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8315/fi-icl-u2/igt@runner@aborted.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8315/fi-icl-u2/boot0.txt
<4>[ 9.948795] ------------[ cut here ]------------
<4>[ 9.948797] WARN_ON(1)
<4>[ 9.948852] WARNING: CPU: 3 PID: 198 at drivers/gpu/drm/i915/display/intel_audio.c:611 hsw_audio_codec_enable+0x594/0x5a0 [i915]
<4>[ 9.948853] Modules linked in: i915 mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul btusb btrtl btbcm btintel ghash_clmulni_intel snd_hda_intel snd_intel_dspcfg bluetooth snd_hda_codec snd_hwdep snd_hda_core cdc_ether usbnet mii snd_pcm e1000e ptp pps_core ecdh_generic ecc mei_me mei intel_lpss_pci prime_numbers
<4>[ 9.948875] CPU: 3 PID: 198 Comm: kworker/u16:2 Not tainted 5.7.0-rc1-CI-CI_DRM_8315+ #1
<4>[ 9.948876] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP TLC, BIOS ICLSFWR1.R00.3183.A00.1905020411 05/02/2019
<4>[ 9.948880] Workqueue: events_unbound async_run_entry_fn
<4>[ 9.948949] RIP: 0010:hsw_audio_codec_enable+0x594/0x5a0 [i915]
<4>[ 9.948951] Code: 09 c4 e9 41 ff ff ff 48 8b 7d 18 48 c7 c6 c0 d5 5a a0 e8 ed 52 27 e1 48 c7 c6 8c ce 5d a0 48 c7 c7 97 ce 5d a0 e8 bc 50 c2 e0 <0f> 0b e9 f1 fa ff ff 0f 1f 44 00 00 41 57 41 56 be 04 00 00 00 41
<4>[ 9.948952] RSP: 0018:ffffc90001ba3730 EFLAGS: 00010282
<4>[ 9.948954] RAX: 0000000000000000 RBX: 0000000000000002 RCX: 0000000000000006
<4>[ 9.948955] RDX: ffff888498714040 RSI: ffff888498714a90 RDI: ffffffff823877ca
<4>[ 9.948956] RBP: ffff88847af40000 R08: ffff888498714a90 R09: 0000000000000000
<4>[ 9.948957] R10: ffffc90001ba3730 R11: 0000000000000000 R12: ffff888485e21000
<4>[ 9.948958] R13: ffff888485e21000 R14: ffff88848577c000 R15: ffff88847af40000
<4>[ 9.948960] FS: 0000000000000000(0000) GS:ffff88849ff80000(0000) knlGS:0000000000000000
<4>[ 9.948961] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[ 9.948962] CR2: 00005633a0b7d988 CR3: 000000048a826003 CR4: 0000000000760ee0
<4>[ 9.948964] PKRU: 55555554
<4>[ 9.948965] Call Trace:
<4>[ 9.949007] intel_audio_codec_enable+0xb4/0x190 [i915]
<4>[ 9.949052] intel_enable_ddi+0x2d4/0x4e0 [i915]
<4>[ 9.949097] intel_encoders_enable+0x7b/0xa0 [i915]
<4>[ 9.949140] hsw_crtc_enable+0x21d/0x620 [i915]
<4>[ 9.949185] intel_enable_crtc+0x4e/0x60 [i915]
<4>[ 9.949225] skl_commit_modeset_enables+0x31b/0x520 [i915]
<4>[ 9.949267] intel_atomic_commit_tail+0x30d/0x1490 [i915]
<4>[ 9.949270] ? flush_workqueue+0x237/0x540
<4>[ 9.949316] intel_atomic_commit+0x318/0x390 [i915]
<4>[ 9.949322] drm_client_modeset_commit_atomic+0x1e7/0x250
<4>[ 9.949336] drm_client_modeset_commit_locked+0x42/0x1a0
<4>[ 9.949341] drm_client_modeset_commit+0x1c/0x40
<4>[ 9.949344] drm_fb_helper_restore_fbdev_mode_unlocked+0x42/0x90
<4>[ 9.949347] drm_fb_helper_set_par+0x24/0x50
<4>[ 9.949386] intel_fbdev_set_par+0x11/0x30 [i915]
<4>[ 9.949389] ? con_is_visible+0x25/0x50
<4>[ 9.949392] fbcon_init+0x37e/0x620
<4>[ 9.949399] visual_init+0xc9/0x130
<4>[ 9.949402] do_bind_con_driver+0x204/0x410
<4>[ 9.949409] do_take_over_console+0x71/0x190
<4>[ 9.949414] do_fbcon_takeover+0x53/0xb0
<4>[ 9.949417] register_framebuffer+0x229/0x330
<4>[ 9.949425] __drm_fb_helper_initial_config_and_unlock+0x353/0x5d0
<4>[ 9.949469] intel_fbdev_initial_config+0xf/0x20 [i915]
<4>[ 9.949471] async_run_entry_fn+0x34/0x160
<4>[ 9.949475] process_one_work+0x268/0x600
<4>[ 9.949478] ? __schedule+0x307/0x8d0
<4>[ 9.949486] worker_thread+0x37/0x380
<4>[ 9.949491] ? process_one_work+0x600/0x600
<4>[ 9.949493] kthread+0x140/0x160
<4>[ 9.949495] ? kthread_park+0x80/0x80
<4>[ 9.949499] ret_from_fork+0x24/0x50
<4>[ 9.949510] irq event stamp: 101414
<4>[ 9.949513] hardirqs last enabled at (101413): [<ffffffff81134f0c>] vprintk_emit+0xcc/0x330
<4>[ 9.949515] hardirqs last disabled at (101414): [<ffffffff81001d50>] trace_hardirqs_off_thunk+0x1a/0x1c
<4>[ 9.949517] softirqs last enabled at (100308): [<ffffffff81e00395>] __do_softirq+0x395/0x49e
<4>[ 9.949519] softirqs last disabled at (100297): [<ffffffff810bbc9a>] irq_exit+0xba/0xc0
<4>[ 9.949521] ---[ end trace 7c5b45cfe591592a ]---